# pytest-data-from-files

./: MANIFEST.in  README.rst  mypy.ini  setup.cfg  setup.py  tox.ini
pkg/: package.spec.in
src/data_from_files/: __init__.py  constants.py  datatypes.py  fixtures.py  hooks.py  loader.py  modinfo.py
tests/: conftest.py  constants.py  test_load.py  test_loader.py  test_modinfo.py  test_plugin.py  test_plugin_no_data.py  test_utils.py  utils.py
tests/data/: README.rst
tests/data/10/environ/: 00.json
tests/data/10/expected/: 10.json  20.json
tests/data/20/expected/: 00.json
tests/data/30/input/: 00.py
tests/data/modinfo/: 10
tests/foo/: test_bar.py
