# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = pytest_data_from_files
description = pytest plugin to provide data from files loaded automatically
project_urls =
    CI: Github Actions = https://github.com/ssato/pytest-data-from-files/actions
    Download = https://pypi.python.org/pypi/pytest-data-from-files
    Bug Tracker = https://github.com/ssato/pytest-data-from-files/issues
    Source = https://github.com/ssato/pytest-data-from-files
long_description =
    pytest plugin to provide data from files loaded automatically.

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/pytest-data-from-files
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Utilities
    Framework :: Pytest

[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    pytest

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
pytest11 =
    data_from_files = data_from_files

[flake8]
per-file-ignores =
    tests/data/*/*/*/*.py: W605
    tests/data/*/*/*/*/*.py: W605

[tool:pytest]
testpaths =
    tests

python_files =
    test_*.py

# addopts = --cov=src -vv
